--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "localtunnel": "^2.0.2"
   }
 }
