--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This app help users to track where all their money go. It allows them to record their daily expenses by categories(Groceries, Facilities, etc ..) and generate weekly report and monthly report.",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run build-babel",
+    "start": "babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,10 +26,22 @@
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0"
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.16.9",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-polyfill": "^6.26.0",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "dotenv": "^16.0.0",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0"
   }
 }
