--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
