--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.33.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
