--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "bugs": {
     "url": "https://github.com/SolvIT-Africa-Bootcamp-cohort2/Expense-tracking-app/issues"
   },
+  "engines": {
+    "node": "16.14.0"
+  },
   "homepage": "https://github.com/SolvIT-Africa-Bootcamp-cohort2/Expense-tracking-app#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -27,7 +30,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
